objects/X9902Client__c.object
<CustomObject>
    <description>To store detailed information about clients served by the Agency.</description>
    <fields>
        <fullName>ClientActivityType__c</fullName>
        <description>The type of activity or service provided to the client.</description>
        <inlineHelpText>Specify the type of activity or service provided to the client.</inlineHelpText>
        <label>Client Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                    <label>Activities for All Counseling and Education</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>NOFA 2014-1 COMP</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>NOFA 2014-2 TRNG</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>NOFA 2015-1 COMP</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>NOFA 2015-2 COMP</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>NOFA 2016-1 COMP</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>NOFA 2017-1 COMP</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>NOFA 2018-1 COMP</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>NOFA 2019-1 COMP</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>NOFA 2020-1 COMP</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>NOFA 2022-1 COMP</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>NOFA 2021-1 COMP</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>NOFA 2023-1 COMP</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>HO INT</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>NOFA 2024-1 COMP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientAttributeHUDGrant__c</fullName>
        <description>Indicates whether the client&apos;s attributes are associated with a HUD (U.S. Department of Housing and Urban Development) grant.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client&apos;s attributes are associated with a HUD grant, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Attribute HUD Grant </label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Comprehensive</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Colonias</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>HECM</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>S8</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Predatory Lending</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>MMMSA</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>TEST</fullName>
                    <isActive>false</isActive>
                    <label>TEST</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientCaseNumber__c</fullName>
        <label>Client Case Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>9902 Client</relationshipLabel>
        <relationshipName>X9902_Client</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClientCity__c</fullName>
        <label>Client City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientColoniasResident__c</fullName>
        <description>Indicates whether the client resides in colonias communities.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client resides in colonias communities, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Colonias Resident</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientCounselSessionDateEnd__c</fullName>
        <description>The end date and time of the client&apos;s counseling session.</description>
        <inlineHelpText>Enter the end date and time of the client&apos;s counseling session.</inlineHelpText>
        <label>Client Counsel Session Date End </label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ClientCounselSessionDateStart__c</fullName>
        <description>The start date and time of the client&apos;s counseling session.</description>
        <inlineHelpText>Enter the start date and time of the client&apos;s counseling session.</inlineHelpText>
        <label>Client Counsel Session Date Start </label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ClientCounselingFee__c</fullName>
        <description>The fee charged for counseling services provided to the client.</description>
        <inlineHelpText>Enter the fee charged for counseling services provided to the client.</inlineHelpText>
        <label>Client Counseling Fee</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClientCounselingTermination__c</fullName>
        <description>Indicates whether the client&apos;s counseling was terminated.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client&apos;s counseling was terminated, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Counseling Termination </label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Ongoing</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Dropped Out</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Referred</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>No Further Contact</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientCounselingType__c</fullName>
        <description>The type or nature of counseling provided to the client.</description>
        <inlineHelpText>Specify the type or nature of counseling provided to the client (e.g., Financial, Housing, Legal).</inlineHelpText>
        <label>Client Counseling Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Face to Face</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Phone</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Internet</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Group</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>Financial</fullName>
                    <isActive>false</isActive>
                    <label>Financial</label>
                </value>
                <value>
                    <fullName>Housing</fullName>
                    <isActive>false</isActive>
                    <label>Housing</label>
                </value>
                <value>
                    <fullName>Legal</fullName>
                    <isActive>false</isActive>
                    <label>Legal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientCounselorHUDId__c</fullName>
        <description>The unique identifier or code representing the client&apos;s counselor assigned by HUD</description>
        <inlineHelpText>Enter the unique identifier for HUD</inlineHelpText>
        <label>Client Counselor HUD Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCounselorID__c</fullName>
        <description>The unique identifier or code representing the client&apos;s assigned counselor.</description>
        <inlineHelpText>Enter the unique identifier or code representing the client&apos;s assigned counselor.</inlineHelpText>
        <label>Client Counselor ID </label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientCreditScoreSource__c</fullName>
        <description>The source from which the client&apos;s credit score was obtained.</description>
        <inlineHelpText>Enter the source from which the client&apos;s credit score was obtained</inlineHelpText>
        <label>Client Credit Score Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>TransUnion</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Equifax</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Experian</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Tri-merge</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>N/A</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientCreditScore__c</fullName>
        <description>The credit score of the client.</description>
        <inlineHelpText>Enter the credit score of the client</inlineHelpText>
        <label>Client Credit Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClientDependentsNumber__c</fullName>
        <description>The number of dependents for whom the client is responsible.</description>
        <inlineHelpText>Enter the total number of dependents for whom the client is responsible.</inlineHelpText>
        <label>Client Dependents Number </label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClientDisabled__c</fullName>
        <description>Indicates whether the client has a disability.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client has a disability, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Disabled</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>1111111111</fullName>
                    <isActive>false</isActive>
                    <label>1111111111</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientDiscriminationVictim__c</fullName>
        <description>Indicates whether the client is a victim of discrimination.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client is a victim of discrimination, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Discrimination Victim</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientEthnicityID__c</fullName>
        <description>The identification code or label representing the client&apos;s ethnicity.</description>
        <inlineHelpText>Enter the identification code or label representing the client&apos;s ethnicity.</inlineHelpText>
        <label>Client Ethnicity ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Hispanic</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Not Hispanic</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Chose not to respond</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientFamilySize__c</fullName>
        <description>The number of individuals included in the client&apos;s family.</description>
        <inlineHelpText>Enter the total number of individuals included in the client&apos;s family. This typically includes the client, their spouse (if applicable), and any dependents.</inlineHelpText>
        <label>Client Family Size </label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClientFarmWorker__c</fullName>
        <description>Indicates whether the client is employed as a farm worker.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client is employed as a farm worker, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Farm Worker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientFinanceTypeAfter__c</fullName>
        <description>The type of financing used by the client after counseling.</description>
        <inlineHelpText>Specify the type of financing used by the client after counseling</inlineHelpText>
        <label>Client Finance Type After</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6</fullName>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>FHA</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>VA</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Conventional</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>USDA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientFinanceTypeBefore__c</fullName>
        <description>The type of financing used by the client before counseling.</description>
        <inlineHelpText>Specify the type of financing used by the client before counseling</inlineHelpText>
        <label>Client Finance Type Before</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6</fullName>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>FHA</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>VA</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Conventional</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>USDA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientFirstTimeHomeBuyer__c</fullName>
        <description>Indicates whether the client is a first-time home buyer.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client is a first-time home buyer, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client First Time Home Buyer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientGender__c</fullName>
        <description>The gender identity of the client.</description>
        <inlineHelpText>Select the gender identity of the client from the available options (e.g., Male, Female, Non-Binary, Other).</inlineHelpText>
        <label>Client Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                    <label>Male</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>Female</label>
                </value>
                <value>
                    <fullName>O</fullName>
                    <label>Other/Non-conforming</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientGrantAmountUsed__c</fullName>
        <description>The amount of grant funds used by the client.</description>
        <inlineHelpText>Enter the amount of grant funds used by the client if applicable.</inlineHelpText>
        <label>Client Grant Amount Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClientHECMCertificateID__c</fullName>
        <description>The unique identifier or code representing the client&apos;s  (HECM) certificate.</description>
        <inlineHelpText>Enter the unique identifier or code representing the client&apos;s  (HECM) certificate if applicable.</inlineHelpText>
        <label>Client HECM Certificate ID </label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientHECMCertificateIssueDate__c</fullName>
        <description>The issue date of the client&apos;s  (HECM) certificate.</description>
        <inlineHelpText>Enter the issue date of the client&apos;s  (HECM) certificate if applicable.</inlineHelpText>
        <label>Client HECM Certificate Issue Date </label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientHECMCertificate__c</fullName>
        <description>Indicates whether the client has a  (HECM) certificate.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client has a  (HECM) certificate, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client HECM Certificate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientHECMCertificateexpirationDate__c</fullName>
        <description>The expiration date of the client&apos;s  (HECM) certificate.</description>
        <inlineHelpText>Enter the expiration date of the client&apos;s  (HECM) certificate if applicable.</inlineHelpText>
        <label>Client HECM Certificate expiration Date </label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientHUDAssistance__c</fullName>
        <description>Indicates whether the client receives housing assistance from HUD</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client receives housing assistance from HUD, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client HUD Assistance </label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Rental Voucher</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Place Based Rental Assistance</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Home Ownership Voucher</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Purchase REO Property</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Down Payment Assistance</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Other HUD Program</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Not Applicable</label>
                </value>
                <value>
                    <fullName>No</fullName>
                    <isActive>false</isActive>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                    <isActive>false</isActive>
                    <label>Yes</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientHeadofHouseholdType__c</fullName>
        <description>Indicates the type of head of household for the client (e.g., Single, Married, Other).</description>
        <inlineHelpText>Select the type of head of household for the client from the available options (e.g., Single, Married, Other).</inlineHelpText>
        <label>Client Head of Household Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                    <label>Married with dependents</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Married without dependents</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Female-headed single parent household</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Male-headed single parent household</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Two or more unrelated adults</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Single adult</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Domestic partnership</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>111</fullName>
                    <isActive>false</isActive>
                    <label>111</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientHighestEducation__c</fullName>
        <description>The highest level of education attained by the client.</description>
        <inlineHelpText>Select the highest level of education attained by the client from the available options (e.g., High School Diploma, Bachelor&apos;s Degree, Master&apos;s Degree).</inlineHelpText>
        <label>Client Highest Education</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>None</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Elementary/Primary</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Junior High School</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>High School/GED</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Junior College</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>University</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Graduate School</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Vocational</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>College</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>111</fullName>
                    <isActive>false</isActive>
                    <label>111</label>
                </value>
                <value>
                    <fullName>Elementary</fullName>
                    <isActive>false</isActive>
                    <label>Elementary</label>
                </value>
                <value>
                    <fullName>High School</fullName>
                    <isActive>false</isActive>
                    <label>High School</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <isActive>false</isActive>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientHouseholdDebt__c</fullName>
        <description>The total amount of debt owed by the client&apos;s household.</description>
        <inlineHelpText>Enter the total amount of debt owed by the client&apos;s household if available.</inlineHelpText>
        <label>Client Household Debt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClientHouseholdGrossMonthlyIncome__c</fullName>
        <description>The total gross monthly income of the client&apos;s household.</description>
        <inlineHelpText>Enter the total gross monthly income of the client&apos;s household. This includes income from all sources before taxes or deductions.</inlineHelpText>
        <label>Client Household Gross Monthly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClientIDNumber__c</fullName>
        <label>Client ID Number </label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientIncomeLevel__c</fullName>
        <description>The income level of the client&apos;s household.</description>
        <inlineHelpText>Enter the income level of the client&apos;s household</inlineHelpText>
        <label>Client Income Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>7</fullName>
                    <label>&lt; 30% of Area Median Income (AMI)</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>30 - 49% of AMI</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>50 - 79% of AMI</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>80 - 100% of AMI</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>&gt;100% AMI</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Chose not to respond</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientIntakeDate__c</fullName>
        <description>The date when the client&apos;s intake process began.</description>
        <inlineHelpText>Enter the date when the client&apos;s intake process began.</inlineHelpText>
        <label>Client Intake Date </label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ClientIntakeLoanHasInterestRate__c</fullName>
        <description>Indicates whether the client&apos;s intake loan has an interest rate.</description>
        <inlineHelpText>Select &quot;Yes&quot; if the client&apos;s intake loan has an interest rate, otherwise select &quot;No&quot;.</inlineHelpText>
        <label>Client Intake Loan Has Interest Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>